--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.codingwithme.notesapp">
+    package="com.recordando.app">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
@@ -9,12 +9,18 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Recordando"
         android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="com.recordando.app.InfosActivity"/>
+        <activity android:name="com.recordando.app.game.MainGame"/>
+        <activity android:name="com.recordando.app.MainActivityNotes"/>
+        <activity android:name="com.recordando.app.MainActivity"/>
+        <activity android:name="com.recordando.app.LoginActivity"/>
+        <activity android:name="com.recordando.app.util.SplashActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
