--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ apply plugin: 'com.android.application'
 android {
     signingConfigs {
         debug {
-            storeFile file('C:\\Users\\pedro\\Documents\\keys\\Keystore.jks')
+            storeFile file('C:\\Users\\Leo sz Tata\\Downloads\\Keystore.jks')
             storePassword '097531'
             keyAlias 'key0'
             keyPassword '097531'
